@@ -1,8 +1,9 @@
 ﻿			wxFormBuilder ChangeLog
 ************************************************************************
 date Version 3.00.48 (RC1)
-+ FS#227: "Custom control class name"
++ FS#227 - "Custom control class name"
 + Added wxGenericDirCtrl
++ FS#173 - "Generate event handler stubs in Tools/Generate Inherited Class"
 
 08/16/2007 Version 3.00.47 (Beta 3)
 + FS#223 - "missing wxTextCtrl style"
